--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -224,7 +224,7 @@ mysql_async = { version = "*", default-features = false, features = ["minimal", 
 postgres-native-tls = "^0"
 native-tls = "^0"
 # samael will break compilation on MacOS. Use this fork instead to make it work
-# samael = { git="https://github.com/njaremko/samael", rev="464d015e3ae393e4b5dd00b4d6baa1b617de0dd6", features = ["xmlsec"] }
+# samael = { git="https://github.com/njaremko/samael", rev="464d015e3ae393e4b5dd00b4d6baa1b617de0dd6", features = ["xmlsec"] }
 samael = { version="0.0.14", features = ["xmlsec"] }
 gcp_auth = "0.9.0"
 rust_decimal = { version = "^1", features = ["db-postgres"]}
@@ -245,10 +245,8 @@ datafusion = "39.0.0"
 object_store = { version = "0.10.0", features = ["aws", "azure"] }
 openidconnect = { version = "3.4.0" }
 zstd = "=0.12.4"
-aws-config = "=1.4.0"
-aws-sdk-sts = "=1.25.0"
-aws-sdk-ssooidc = "=1.25.0"
-aws-sdk-sso = "=1.25.0"
+aws-config = "^1"
+aws-sdk-sts = "^1"
 
 crc = "^3"
 tar = "^0"
