--- a/backend/windmill-indexer/Cargo.toml
+++ b/backend/windmill-indexer/Cargo.toml
@@ -11,6 +11,8 @@ path = "src/lib.rs"
 [features]
 default = []
 tantivy = ["dep:tantivy"]
+parquet = ["dep:object_store"]
+enterprise = []
 
 [dependencies]
 windmill-common.workspace = true
@@ -26,3 +28,5 @@ uuid.workspace = true
 futures.workspace = true
 tempfile.workspace = true
 bytes.workspace = true
+object_store = { workspace = true, optional = true}
+tokio-tar.workspace = true
