--- a/backend/parsers/windmill-parser-wasm/deno.json
+++ b/backend/parsers/windmill-parser-wasm/deno.json
@@ -1,5 +1,5 @@
 {
-    "tasks": {
-      "wasmbuild": "deno run -A https://deno.land/x/wasmbuild@0.15.4/main.ts"
-    }
+  "tasks": {
+    "wasmbuild": "deno run -A jsr:@deno/wasmbuild@0.17.2"
   }
+}
