--- a/backend/windmill-api/Cargo.toml
+++ b/backend/windmill-api/Cargo.toml
@@ -18,6 +18,7 @@ embedding = ["dep:tinyvector", "dep:hf-hub", "dep:tokenizers", "dep:candle-core"
 parquet = ["dep:datafusion", "dep:object_store", "dep:url", "windmill-common/parquet"]
 prometheus = ["windmill-common/prometheus", "windmill-queue/prometheus", "dep:prometheus"]
 openidconnect = ["dep:openidconnect"]
+tantivy = ["dep:windmill-indexer"]
 
 [dependencies]
 windmill-queue.workspace = true
@@ -27,7 +28,7 @@ windmill-parser.workspace = true
 windmill-parser-py-imports.workspace = true
 windmill-parser-ts.workspace = true
 windmill-git-sync.workspace = true
-windmill-indexer.workspace = true
+windmill-indexer = { workspace = true, optional = true }
 tokio.workspace = true
 anyhow.workspace = true
 argon2.workspace = true
