Revert "feat: multi statement sql (#4104)"
This reverts commit 23108b4688ec9c9683371ee70a50658f6baae42f.

--- a/backend/parsers/windmill-sql-datatype-parser-wasm/Cargo.toml
+++ b/backend/parsers/windmill-sql-datatype-parser-wasm/Cargo.toml
@@ -17,3 +17,4 @@ wasm-bindgen-test.workspace = true
 windmill-parser.workspace = true
 windmill-parser-sql.workspace = true
 wasm-bindgen.workspace = true
+serde = { version = "1.0", features = ["derive"] }
