--- a/backend/parsers/windmill-parser/Cargo.toml
+++ b/backend/parsers/windmill-parser/Cargo.toml
@@ -9,5 +9,5 @@ name = "windmill_parser"
 path = "./src/lib.rs"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
+serde.workspace = true
 serde_json.workspace = true
