--- a/frontend/package.json
+++ b/frontend/package.json
@@ -90,12 +90,14 @@
 	"type": "module",
 	"dependencies": {
 		"@aws-crypto/sha256-js": "^4.0.0",
+		"@dagrejs/dagre": "^1.1.3",
 		"@json2csv/plainjs": "^7.0.6",
 		"@leeoniya/ufuzzy": "^1.0.8",
 		"@popperjs/core": "^2.11.6",
 		"@redocly/json-to-json-schema": "^0.0.1",
 		"@tanstack/svelte-table": "^8.9.9",
 		"@windmill-labs/svelte-dnd-action": "latest",
+		"@xyflow/svelte": "^0.1.14",
 		"ag-charts-community": "^9.0.1",
 		"ag-charts-enterprise": "^9.0.1",
 		"ag-grid-community": "^31.0.0",
