--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
 		"@types/d3-zoom": "^3.0.3",
 		"@types/lodash": "^4.14.195",
 		"@types/node": "^20.3.3",
+		"@types/picomatch": "^3.0.0",
 		"@types/vscode": "^1.83.5",
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.60.0",
@@ -120,6 +121,7 @@
 		"ol": "^7.4.0",
 		"openai": "^4.47.1",
 		"pdfjs-dist": "^3.8.162",
+		"picomatch": "^4.0.2",
 		"quill": "^1.3.7",
 		"svelte-carousel": "^1.0.25",
 		"svelte-chartjs": "^3.1.5",
