--- a/frontend/package.json
+++ b/frontend/package.json
@@ -114,6 +114,7 @@
 		"hash-sum": "^2.0.0",
 		"highlight.js": "^11.8.0",
 		"lucide-svelte": "^0.293.0",
+		"minimatch": "^10.0.1",
 		"monaco-editor": "npm:@codingame/monaco-editor-treemended@>=1.83.5 <1.84.0",
 		"monaco-graphql": "^1.5.1",
 		"monaco-languageclient": "~7.0.1",
