fix: case insensitive encoding for email triggers

--- a/backend/windmill-api/Cargo.toml
+++ b/backend/windmill-api/Cargo.toml
@@ -51,6 +51,7 @@ chrono.workspace = true
 chrono-tz.workspace = true
 hex.workspace = true
 base64.workspace = true
+base32.workspace = true
 serde_urlencoded.workspace = true
 cron.workspace = true
 mime_guess.workspace = true
