--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
 		"typescript": "^5.1.3",
 		"vite": "^5",
 		"vite-plugin-circular-dependency": "^0.2.1",
+		"vite-plugin-mkcert": "^1.17.5",
 		"yootils": "^0.3.1"
 	},
 	"overrides": {
