Handle rust job execution

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "./parsers/windmill-parser-ts",
     "./parsers/windmill-parser-wasm",
     "./parsers/windmill-parser-go",
+    "./parsers/windmill-parser-rust",
     "./parsers/windmill-parser-bash",
     "./parsers/windmill-parser-py",
     "./parsers/windmill-parser-py-imports",
@@ -113,6 +114,7 @@ windmill-parser-ts = { path = "./parsers/windmill-parser-ts" }
 windmill-parser-py = { path = "./parsers/windmill-parser-py" }
 windmill-parser-py-imports = { path = "./parsers/windmill-parser-py-imports" }
 windmill-parser-go = { path = "./parsers/windmill-parser-go" }
+windmill-parser-rust = { path = "./parsers/windmill-parser-rust" }
 windmill-parser-bash = { path = "./parsers/windmill-parser-bash" }
 windmill-parser-sql = { path = "./parsers/windmill-parser-sql" }
 windmill-parser-graphql = { path = "./parsers/windmill-parser-graphql" }
@@ -261,3 +263,7 @@ tikv-jemalloc-ctl = { version = "^0.5" }
 triomphe = "<0.1.12"
 
 tantivy = "0.22.0"
+tree-sitter = "0.22"
+tree-sitter-rust = "0.21"
+pulldown-cmark = "0.9"
+toml = "0.7"
