--- a/backend/windmill-worker/Cargo.toml
+++ b/backend/windmill-worker/Cargo.toml
@@ -25,6 +25,7 @@ windmill-common = { workspace = true, default-features = false }
 windmill-parser.workspace = true
 windmill-parser-ts.workspace = true
 windmill-parser-go.workspace = true
+windmill-parser-rust.workspace = true
 windmill-parser-py.workspace = true
 windmill-parser-py-imports.workspace = true
 windmill-parser-bash.workspace = true
