--- a/frontend/package.json
+++ b/frontend/package.json
@@ -121,6 +121,7 @@
 		"monaco-languageclient": "~7.0.1",
 		"ol": "^7.4.0",
 		"openai": "^4.47.1",
+		"p-limit": "^6.1.0",
 		"pdfjs-dist": "^3.8.162",
 		"quill": "^1.3.7",
 		"rfc4648": "^1.5.3",
