feat: cache common hub scripts in image

--- a/docker/DockerfileSlim
+++ b/docker/DockerfileSlim
@@ -27,7 +27,11 @@ COPY --from=denoland/deno:1.44.4 --chmod=755 /usr/bin/deno /usr/bin/deno
 
 RUN ln -s ${APP}/windmill /usr/local/bin/windmill
 
+COPY ./frontend/src/lib/hubPaths.json /usr/local/bin/hubPaths.json
+
 RUN windmill cache
+
+RUN rm /usr/local/bin/hubPaths.json
 
 EXPOSE 8000
 
