--- a/backend/parsers/windmill-parser-rust/Cargo.toml
+++ b/backend/parsers/windmill-parser-rust/Cargo.toml
@@ -16,7 +16,7 @@ anyhow.workspace = true
 convert_case.workspace = true
 lazy_static.workspace = true
 regex.workspace = true
-tree-sitter.workspace = true
-tree-sitter-rust.workspace = true
 pulldown-cmark.workspace = true
 toml.workspace = true
+syn.workspace = true
+quote.workspace = true
