--- a/docker/DockerfileSlim
+++ b/docker/DockerfileSlim
@@ -27,7 +27,11 @@ COPY --from=denoland/deno:1.44.4 --chmod=755 /usr/bin/deno /usr/bin/deno
 
 RUN ln -s ${APP}/windmill /usr/local/bin/windmill
 
-RUN windmill cache
+COPY ./frontend/src/lib/hubPaths.json ${APP}/hubPaths.json
+
+RUN windmill cache ${APP}/hubPaths.json
+
+RUN rm ${APP}/hubPaths.json
 
 EXPOSE 8000
 
