--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "windmill-components",
-	"version": "1.383.1",
+	"version": "1.383.8",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -17,6 +17,7 @@
 		"filter-classes": "node filterTailwindClasses.js"
 	},
 	"devDependencies": {
+		"@windmill-labs/esbuild-import-meta-url-plugin": "0.0.0-semantic-release",
 		"@floating-ui/core": "^1.3.1",
 		"@hey-api/openapi-ts": "^0.43.0",
 		"@playwright/test": "^1.34.3",
@@ -72,25 +73,25 @@
 		"@rgossiaux/svelte-headlessui": {
 			"svelte": "$svelte"
 		},
-		"ag-grid-svelte": {
-			"svelte": "$svelte"
+		"monaco-graphql": {
+			"monaco-editor": "$monaco-editor"
 		},
 		"svelte-chartjs": {
 			"svelte": "$svelte"
-		},
-		"svelte-timezone-picker": {
-			"svelte": "$svelte"
-		},
-		"monaco-editor": "$monaco-editor",
-		"vscode": "$vscode"
-	},
-	"resolutions": {
-		"monaco-editor": "npm:@codingame/monaco-editor-treemended@>=1.83.5 <1.84.0",
-		"vscode": "npm:@codingame/monaco-vscode-api@>=1.83.5 <1.84.0"
+		}
 	},
 	"type": "module",
 	"dependencies": {
 		"@aws-crypto/sha256-js": "^4.0.0",
+		"@codingame/monaco-vscode-configuration-service-override": "~8.0.2",
+		"@codingame/monaco-vscode-files-service-override": "~8.0.2",
+		"@codingame/monaco-vscode-keybindings-service-override": "~8.0.2",
+		"@codingame/monaco-vscode-lifecycle-service-override": "~8.0.2",
+		"@codingame/monaco-vscode-localization-service-override": "~8.0.2",
+		"@codingame/monaco-vscode-standalone-json-language-features": "~8.0.2",
+		"@codingame/monaco-vscode-standalone-languages": "~8.0.2",
+		"@codingame/monaco-vscode-standalone-css-language-features": "~8.0.2",
+		"@codingame/monaco-vscode-standalone-typescript-language-features": "~8.0.2",
 		"@json2csv/plainjs": "^7.0.6",
 		"@leeoniya/ufuzzy": "^1.0.8",
 		"@popperjs/core": "^2.11.6",
@@ -117,9 +118,10 @@
 		"highlight.js": "^11.8.0",
 		"lucide-svelte": "^0.293.0",
 		"minimatch": "^10.0.1",
-		"monaco-editor": "npm:@codingame/monaco-editor-treemended@>=1.83.5 <1.84.0",
-		"monaco-graphql": "^1.5.1",
-		"monaco-languageclient": "~7.0.1",
+		"monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~8.0.2",
+		"monaco-editor-wrapper": "^5.5.2",
+		"monaco-graphql": "^1.6.0",
+		"monaco-languageclient": "~8.8.2",
 		"ol": "^7.4.0",
 		"openai": "^4.47.1",
 		"p-limit": "^6.1.0",
@@ -132,10 +134,10 @@
 		"svelte-infinite-loading": "^1.3.8",
 		"svelte-tiny-virtual-list": "^2.0.5",
 		"tailwind-merge": "^1.13.2",
-		"vscode": "npm:@codingame/monaco-vscode-api@>=1.83.5 <1.84.0",
+		"vscode": "npm:@codingame/monaco-vscode-api@~8.0.2",
 		"vscode-languageclient": "~9.0.1",
 		"vscode-uri": "~3.0.8",
-		"vscode-ws-jsonrpc": "~3.1.0",
+		"vscode-ws-jsonrpc": "~3.3.2",
 		"windmill-parser-wasm": "^1.367.2",
 		"windmill-sql-datatype-parser-wasm": "^1.318.0",
 		"y-monaco": "^0.1.4",
