--- a/frontend/package.json
+++ b/frontend/package.json
@@ -136,7 +136,10 @@
 		"vscode-languageclient": "~9.0.1",
 		"vscode-uri": "~3.0.8",
 		"vscode-ws-jsonrpc": "~3.1.0",
-		"windmill-parser-wasm": "^1.367.2",
+		"windmill-parser-wasm-compiled-lang": "^1.382.2",
+		"windmill-parser-wasm-script-lang": "^1.382.2",
+		"windmill-parser-wasm-sql": "^1.382.2",
+		"windmill-parser-wasm-ts": "^1.382.2",
 		"windmill-sql-datatype-parser-wasm": "^1.318.0",
 		"y-monaco": "^0.1.4",
 		"y-websocket": "^1.5.0",
