--- a/backend/windmill-common/Cargo.toml
+++ b/backend/windmill-common/Cargo.toml
@@ -52,6 +52,7 @@ bytes.workspace = true
 mail-send.workspace = true
 futures-core.workspace = true
 async-stream.workspace = true
+const_format.workspace = true
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemalloc-ctl = { optional = true, workspace = true }
