Use regex-lite, reorganize the parser split

--- a/backend/parsers/windmill-parser-bash/Cargo.toml
+++ b/backend/parsers/windmill-parser-bash/Cargo.toml
@@ -8,9 +8,14 @@ authors.workspace = true
 name = "windmill_parser_bash"
 path = "./src/lib.rs"
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+regex-lite.workspace = true
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+regex.workspace = true
+
 [dependencies]
 windmill-parser.workspace = true
 anyhow.workspace = true
-regex.workspace = true
 lazy_static.workspace = true
 serde_json.workspace = true
