--- a/backend/parsers/windmill-parser/Cargo.toml
+++ b/backend/parsers/windmill-parser/Cargo.toml
@@ -11,3 +11,4 @@ path = "./src/lib.rs"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json.workspace = true
+convert_case.workspace = true
