Update imports to the new wasm parser split

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -136,9 +136,9 @@
 		"vscode-languageclient": "~9.0.1",
 		"vscode-uri": "~3.0.8",
 		"vscode-ws-jsonrpc": "~3.1.0",
-		"windmill-parser-wasm-compiled-lang": "^1.382.2",
-		"windmill-parser-wasm-script-lang": "^1.382.2",
-		"windmill-parser-wasm-sql": "^1.382.2",
+		"windmill-parser-wasm-other": "^1.382.2",
+		"windmill-parser-wasm-py": "^1.382.2",
+		"windmill-parser-wasm-regex": "^1.382.2",
 		"windmill-parser-wasm-ts": "^1.382.2",
 		"windmill-sql-datatype-parser-wasm": "^1.318.0",
 		"y-monaco": "^0.1.4",
