--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,7 @@
 		"generate-backend-client": "openapi-ts --input ../backend/windmill-api/openapi.yaml --output ./src/lib/gen --useOptions --enums javascript --format false",
 		"generate-backend-client-mac": "openapi-ts --input ../backend/windmill-api/openapi.yaml --output ./src/lib/gen --useOptions --enums javascript",
 		"pretest": "tsc --incremental -p tests/tsconfig.json",
-		"test": "playwright test --config=tests-out/playwright.config.js",
-		"filter-classes": "node filterTailwindClasses.js"
+		"test": "playwright test --config=tests-out/playwright.config.js"
 	},
 	"devDependencies": {
 		"@floating-ui/core": "^1.3.1",
