--- a/backend/parsers/windmill-parser-wasm/Cargo.toml
+++ b/backend/parsers/windmill-parser-wasm/Cargo.toml
@@ -16,9 +16,11 @@ opt-level = 's'
 
 [dev-dependencies]
 wasm-bindgen-test.workspace = true
+windmill-parser-ts.workspace = true
+windmill-parser-bash.workspace = true
 
 [features]
-default = ["ts-parser", "bash-parser"]
+default = []
 go-parser = [ "dep:windmill-parser-go"]
 bash-parser = [ "dep:windmill-parser-bash"]
 sql-parser = [ "dep:windmill-parser-sql"]
