--- a/frontend/package.json
+++ b/frontend/package.json
@@ -139,7 +139,11 @@
 		"vscode-languageclient": "~9.0.1",
 		"vscode-uri": "~3.0.8",
 		"vscode-ws-jsonrpc": "~3.3.2",
-		"windmill-parser-wasm": "^1.367.2",
+		"windmill-parser-wasm-php": "^1.382.2",
+		"windmill-parser-wasm-go": "^1.382.2",
+		"windmill-parser-wasm-py": "^1.382.2",
+		"windmill-parser-wasm-regex": "^1.382.2",
+		"windmill-parser-wasm-ts": "^1.382.2",
 		"windmill-sql-datatype-parser-wasm": "^1.318.0",
 		"y-monaco": "^0.1.4",
 		"y-websocket": "^1.5.0",
