--- a/docker/DockerfileNsjail
+++ b/docker/DockerfileNsjail
@@ -25,4 +25,7 @@ FROM ghcr.io/windmill-labs/windmill-ee:dev
 
 RUN apt-get update && apt-get install -y libprotobuf-dev libnl-route-3-dev
 
+COPY --from=rust:1.80.1 /usr/local/cargo /usr/local/cargo
+COPY --from=rust:1.80.1 /usr/local/rustup /usr/local/rustup
+
 COPY --from=nsjail /nsjail/nsjail /bin/nsjail
