--- a/backend/parsers/windmill-parser-wasm/Cargo.toml
+++ b/backend/parsers/windmill-parser-wasm/Cargo.toml
@@ -10,10 +10,6 @@ crate-type = ["cdylib"]
 name = "windmill_parser_wasm"
 path = "./src/lib.rs"
 
-[profile.release]
-lto = true
-opt-level = 's'
-
 [dev-dependencies]
 wasm-bindgen-test.workspace = true
 windmill-parser-ts.workspace = true
@@ -27,6 +23,7 @@ sql-parser = [ "dep:windmill-parser-sql"]
 py-parser = [ "dep:windmill-parser-py"]
 ts-parser = [ "dep:windmill-parser-ts"]
 php-parser = [ "dep:windmill-parser-php"]
+rust-parser = [ "dep:windmill-parser-rust"]
 graphql-parser = [ "dep:windmill-parser-graphql"]
 
 [dependencies]
@@ -39,6 +36,7 @@ windmill-parser-py = { workspace = true, optional = true }
 windmill-parser-ts = { workspace = true, optional = true }
 windmill-parser-php = { workspace = true, optional = true }
 windmill-parser-graphql = { workspace = true, optional = true }
+windmill-parser-rust = { workspace = true, optional = true }
 wasm-bindgen.workspace = true
 serde_json.workspace = true
 getrandom = { workspace = true, features = ["js"] }
