--- a/backend/windmill-common/Cargo.toml
+++ b/backend/windmill-common/Cargo.toml
@@ -37,6 +37,8 @@ reqwest = { workspace = true }
 tracing-subscriber = { workspace = true }
 lazy_static.workspace = true
 tracing-flame = { version = "^0", optional = true }
+tracing-appender.workspace = true
+gethostname.workspace = true
 itertools.workspace = true
 regex.workspace = true
 git-version.workspace = true
