--- a/docker/DockerfileCli
+++ b/docker/DockerfileCli
@@ -1,5 +1,5 @@
-FROM denoland/deno:1.44.4
+FROM node:slim
 
-RUN deno install -q -A https://raw.githubusercontent.com/windmill-labs/windmill/main/cli/main.ts --name wmill
+RUN npm install -g windmill-cli
 
 ENTRYPOINT [ "wmill" ]
