--- a/backend/parsers/windmill-parser-wasm/Cargo.toml
+++ b/backend/parsers/windmill-parser-wasm/Cargo.toml
@@ -25,6 +25,7 @@ ts-parser = [ "dep:windmill-parser-ts"]
 php-parser = [ "dep:windmill-parser-php"]
 rust-parser = [ "dep:windmill-parser-rust"]
 graphql-parser = [ "dep:windmill-parser-graphql"]
+ansible-parser = [ "dep:windmill-parser-yaml"]
 
 [dependencies]
 anyhow.workspace = true
@@ -37,6 +38,7 @@ windmill-parser-ts = { workspace = true, optional = true }
 windmill-parser-php = { workspace = true, optional = true }
 windmill-parser-graphql = { workspace = true, optional = true }
 windmill-parser-rust = { workspace = true, optional = true }
+windmill-parser-yaml = { workspace = true, optional = true }
 wasm-bindgen.workspace = true
 serde_json.workspace = true
 getrandom = { workspace = true, features = ["js"] }
