--- a/backend/windmill-worker/Cargo.toml
+++ b/backend/windmill-worker/Cargo.toml
@@ -87,6 +87,7 @@ openidconnect = { workspace = true, optional = true}
 tar.workspace = true
 object_store = { workspace = true, optional = true}
 convert_case.workspace = true
+yaml-rust.workspace = true
 
 [build-dependencies]
 deno_fetch.workspace = true
